--- a/web.2.2/website2.html
+++ b/web.2.2/website2.html
@@ -104,13 +104,25 @@
                 <div class="footer-section">
                     <h3>Contact</h3>
                     <p>
-                        <b>Alamat :</b> jl.puri persada indah blok i no 20
+                        <tr>
+                            <td>Alamat</td>
+                            <td>:</td>
+                            <td>jl.puri persada indah blok i no 20</td>
+                        </tr> 
                     </p>
                     <p>
-                        <b>Kecamatan :</b> Cibarusah
+                        <tr>
+                            <td>kecamatan</td>
+                            <td>:</td>
+                            <td>Sindang Mulya</td>
+                        </tr>
                     </p>
                     <p>
-                        <b>Kabupaten :</b> Bekasi
+                       <tr>
+                        <td>kabupaten</td>
+                        <td>:</td>
+                        <td>Bekasi</td>
+                       </tr>
                     </p>
                 </div>
                 <div class="footer-section">
